--- a/APCS/_toc.yml
+++ b/APCS/_toc.yml
@@ -16,4 +16,7 @@ chapters:
       - file: setup/command_line
       - file: setup/installation_mac
       - file: setup/installation_windows
+    - file: unit0_numeric_conversion/index
+      sections:
+      - file: unit0_numeric_conversion/Unit0_Assignment
     - file: about
