--- a/APCS/_toc.yml
+++ b/APCS/_toc.yml
@@ -22,4 +22,7 @@ chapters:
     - file: unit1_java_basics/index
       sections:
       - file: unit1_java_basics/Unit1_Assignment
+    - file: unit2_functions_testing/index
+      sections:
+      - file: unit2_functions_testing/Unit2_Assignment
     - file: about
